added proof of new theorem; fixed other things

--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -30,6 +30,7 @@
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
 \newcommand{\Con}{\ensuremath{\operatorname{Con}}}
 \newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
+\newcommand{\Sg}{\ensuremath{\operatorname{Sg}}}
 \newcommand{\Clo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
 \newcommand{\typ}{\ensuremath{\operatorname{typ}}}
 \newcommand{\Pol}{\ensuremath{\operatorname{Pol}}}
