additions and reorg

--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -1,5 +1,6 @@
 \newcommand{\CC}[3]{\ensuremath{\sansC(#1, #2; #3)}} % \CC{a}{b}{c}  for  C(a, b; c)
 \newcommand{\C}[2]{\ensuremath{\sansC(#1, #2)}}      % \C{a}{b}      for  C(a, b)
+\newcommand{\comm}[2]{\ensuremath{\mathrel{[#1, #2]}}}
 \newcommand{\etaR}{\ensuremath{\tilde{\eta}}}
 \newcommand{\hto}{\ensuremath{\rightharpoonup}}
 \newcommand{\bool}{\ensuremath{\mathtt{Bool}}}
