added note on local diff terms

--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -77,6 +77,7 @@
 \newcommand{\bD}{\ensuremath{\mathbf{D}}}
 \newcommand{\bF}{\ensuremath{\mathbf{F}}}
 \newcommand{\bP}{\ensuremath{\mathbf{P}}}
+\newcommand{\bp}{\ensuremath{\mathbf{p}}}
 \newcommand{\br}{\ensuremath{\mathbf{r}}}
 \newcommand\ubA{\ensuremath{\underline{\mathbf{A}}}}
 \newcommand\uA{\ensuremath{\underline{A}}}
