added proof of new theorem on local diff terms

--- a/notes/loc-diff-terms/local-diff-terms.tex
+++ b/notes/loc-diff-terms/local-diff-terms.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{amsart}
+\documentclass[12pt]{amsart}
 % The following \documentclass options may be useful:
 % preprint      Remove this option only once the paper is in final form.
 % 10pt          To set in 10-point type instead of 9-point.
@@ -17,8 +17,10 @@
 \usepackage{scalefnt}
 \usepackage{tikz}
 \usepackage{color}
-\usepackage[margin=1in]{geometry}
+%% \usepackage[margin=1in]{geometry}
+\usepackage{fullpage}
 \usepackage{scrextend}
+\usepackage{setspace}\onehalfspacing
 
 %%////////////////////////////////////////////////////////////////////////////////
 %% Theorem styles
@@ -38,6 +40,7 @@
 \newtheorem{example}[theorem]{Example}
 \newtheorem{examples}[theorem]{Examples}
 \newtheorem{exercise}{Exercise}
+\newtheorem*{thm}{Theorem}
 \newtheorem*{lem}{Lemma}
 \newtheorem*{cor}{Corollary}
 \newtheorem*{remark}{Remark}
